--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -15,11 +15,11 @@
  <!-- Contenido -->
  <section>
 <b>Libros</b>
- <p>(Contenido)</p>
+ <p>El Quijote</p>
 </section>
  <section>
 <b>Películas</b>
- <p>(Contenido sobre libros)</p>
+ <p>La Quijota 4K</p>
  </section>
  <!-- Pie de pagina -->
  <footer>
